# omr-w-human-feedback-loop

./: CLAUDE.md  conftest.py  pyproject.toml  score.py
.claude/rules/: correction.md  export.md  validation.md
correction/: __init__.py  edit.py  interpret.py  ops.py
evals/: harness.py
evals/correction/: test_correction.py
evals/correction/cases/: delete_middle_rest.json  insert_note_append_at_end.json  insert_rest_in_middle.json  set_duration_second_note_to_half.json  set_pitch_first_note.json
evals/export/: test_export.py
evals/export/cases/: accidental_and_tie_across_barline.json  all_accidentals_flat_key.json  breve_duration.json  dots_and_clef_change.json  metadata_title_composer.json  rests_mixed.json  single_measure_basic.json
evals/validation/: test_validation.py
evals/validation/cases/: exact_valid_4_4.json  overflow_3_4.json  score_all_valid_inherits.json  score_meter_change_underflow.json  score_one_overflow.json  underflow_4_4.json
export/: __init__.py  musicxml.py
model/: __init__.py
validation/: __init__.py  report.py  validator.py
